--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.2.14",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.1.2"
+    },
+    "dependencies": {
+        "-": "0.0.1",
+        "@popperjs/core": "^2.9.2",
+        "g": "^2.0.1",
+        "npm": "^7.12.0"
     }
 }
